packages/next-swc/crates/core/tests/errors/server-actions/server-graph/1/output.js
/* __next_internal_action_entry_do_not_use__ foo */ import __create_action_proxy__ from "private-next-rsc-action-proxy";
export function foo() {}
import ensureServerEntryExports from "private-next-rsc-action-validate";
ensureServerEntryExports([
    foo
]);
__create_action_proxy__("ab21efdafbe611287bc25c0462b1e0510d13e48b", null, foo);
